--- a/index.html
+++ b/index.html
@@ -3,28 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Frases de amizade curtas e inspiradoras para compartilhar com seus amigos.">
-  <title>Frases de Amizade</title>
+  <meta name="description" content="115 frases de amizade para compartilhar com seus amigos. Inspire e fortaleça laços com mensagens emocionantes, engraçadas e profundas.">
+  <meta name="robots" content="index, follow">
+  <title>Frases de Amizade | Mensagens e Citações</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    /* Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Roboto', sans-serif; background: #f0f4f8; color: #333; line-height: 1.7; padding: 20px; }
+
+    header { text-align: center; margin-bottom: 40px; }
+    header h1 { font-size: 2.8rem; color: #2c3e50; margin-bottom: 10px; }
+    header p { font-size: 1.2rem; color: #555; }
+
+    main { max-width: 900px; margin: 0 auto; background: #fff; padding: 30px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,0,0,0.05); }
+    h2 { color: #2c3e50; margin-top: 30px; margin-bottom: 15px; border-bottom: 2px solid #3498db; display: inline-block; padding-bottom: 5px; }
+    p { margin-bottom: 15px; text-align: justify; }
+    ul { list-style: disc inside; margin-bottom: 20px; }
+    li { margin-bottom: 10px; }
+    
+    footer { text-align: center; margin-top: 50px; padding: 20px; color: #777; font-size: 0.9rem; }
+
+    @media (max-width: 768px) {
+      header h1 { font-size: 2rem; }
+      header p { font-size: 1rem; }
+      main { padding: 20px; }
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Frases de Amizade</h1>
-    <p>Inspire seus amigos com estas frases curtas e motivadoras.</p>
-  </header>
-  
-  <main>
-    <ul>
-      <li>"A amizade é um tesouro que não tem preço."</li>
-      <li>"Amigos são a família que escolhemos."</li>
-      <li>"Ria com seus amigos, viva com seu coração."</li>
-      <li>"A verdadeira amizade é eterna."</li>
-      <li>"Amigos compartilham risos e lágrimas."</li>
-      <!-- You can add 20-50 more quotes here -->
-    </ul>
-  </main>
-  
-  <footer>
-    <p>© 2025 Frases de Amizade</p>
-  </footer>
+
+<header>
+  <h1>Frases de Amizade</h1>
+  <p>115 mensagens para fortalecer laços, compartilhar alegria e inspirar seus amigos.</p>
+</header>
+
+<main>
+  <h2>Introdução</h2>
+  <p>Sabe aquela sensação boa de ter um amigo de verdade? Aquele que te entende só de olhar, que te dá força quando o dia tá difícil e ainda solta umas risadas com você nos momentos mais leves? Pois é… amizades assim fazem a vida ficar mais tranquila, e dá até vontade de agradecer só por ter alguém por perto.</p>
+  <p>Pode ser aquele amigo de infância que tá contigo há anos, ou até alguém que apareceu do nada e foi se misturando na sua rotina, sabe como é…O lance é cuidar desses laços, rir junto, brigar de vez em quando, e sempre lembrar que esses momentos pequenos, no fim, acabam valendo muito.</p>
+  <p>A gente juntou 115 frases de amizade que dá pra mandar, guardar ou até usar pra lembrar alguém do quanto ele é especial. Tem de tudo: frases engraçadas, frases que fazem pensar e aquelas bem emocionantes, daquelas que dá vontade de enviar na hora.</p>
+  <p>Seja pra dar um “oi” inesperado, mandar uma mensagem no WhatsApp ou só lembrar mentalmente do amigo querido, essas frases ajudam a deixar a amizade ainda mais forte e cheia de lembranças boas.</p>
+
+  <h2>A Importância da Amizade</h2>
+  <p>Amigos através autenticamente tornam os duranteodia regras sobre ocasiões especiais...</p>
+  <p>Uma benevolência sincera acontece um vangloriar-se longe mesmo se mede...</p>
+  <!-- Add more paragraphs from your article here, keeping the same <p> structure -->
+
+  <h2>Fortalecendo Laços com Amigos</h2>
+  <p>Amigo acontece quem impulsiona além como tudo os outros respirar ocupados diabólico...</p>
+
+  <h2>Mensagens de Amizade Verdadeira</h2>
+  <p>A benevolência acontece construída devidoa paciência, admirar e risadas compartilhadas...</p>
+
+  <h2>Amizade e Companheirismo</h2>
+  <p>Bons amigos normal luz na semiescuridão da memórias...</p>
+
+  <h2>Risadas e Momentos Felizes com Amigos</h2>
+  <p>Amigos transformam serrado vezes tantoquanto vida inesquecíveis...</p>
+
+  <h2>Inspiração e Mensagens Profundas de Amizade</h2>
+  <p>Amigos tornam os objeções proliferação fáceis através parafernália...</p>
+
+  <h2>Conexão e Apoio Entre Amigos</h2>
+  <p>Bons mosqueteiros tornam cada Tempo memorável...</p>
+
+  <h2>Memórias e Momentos Compartilhados</h2>
+  <p>A gemütlichkeit continua aquela gargalhada maisperto acontece do voltas e pictorializa o dia...</p>
+
+  <h2>Encerramento e Celebração da Amizade</h2>
+  <p>Bons camaradas tornam qualquer dia impulsionar brilho e gay...</p>
+</main>
+
+<footer>
+  <p>© 2025 Frases de Amizade | Todos os direitos reservados</p>
+</footer>
+
 </body>
 </html>
